--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "npm run build && serve -s build",
-    "start:dev": "react-scripts start",
+    "start": "nodemon -e ts,tsx -i build --exec npm run start:dev:nodemon",
+    "start:dev:nodemon": "npm run build && serve -s build",
+    "start:dev:hot-reload": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -55,5 +56,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12"
   }
 }
