--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "otp": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "rxjs": "^7.3.0",
     "serve": "^12.0.0",
@@ -59,6 +60,8 @@
     ]
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "@types/react-router-dom": "^5.1.8",
+    "nodemon": "^2.0.12",
+    "prettier": "^2.3.2"
   }
 }
