Add command id to command.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "rxjs": "^7.3.0",
     "serve": "^12.0.0",
     "typescript": "^4.3.5",
+    "uuid": "^8.3.2",
     "web-vitals": "^0.2.4",
     "workbox-background-sync": "^5.1.4",
     "workbox-broadcast-update": "^5.1.4",
@@ -62,6 +63,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.8",
+    "@types/uuid": "^8.3.1",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
   }
