--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.20.18",
     "@types/react": "^16.14.11",
     "@types/react-dom": "^16.9.14",
+    "comlink": "^4.3.1",
     "otp": "^1.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
