--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^16.14.11",
     "@types/react-dom": "^16.9.14",
     "comlink": "^4.3.1",
+    "idb-keyval": "^5.1.3",
     "otp": "^1.0.1",
     "react": "^17.0.2",
     "react-async": "^10.0.1",
