--- a/package.json
+++ b/package.json
@@ -41,10 +41,10 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "start": "nodemon -e ts,tsx -i build --exec npm run start:dev:nodemon",
+    "start": "npm run start:dev:nodemon",
     "start:dev:watch": "npm run watch & npm run serve",
     "start:dev:nodemon": "nodemon -e ts,tsx -i build --exec npm run start:dev:nodemon:script",
-    "start:dev:nodemon:script": "GENERATE_SOURCEMAP=true npm run build && npm run serve",
+    "start:dev:nodemon:script": "npm run build && npm run serve",
     "start:dev:hot-reload": "react-scripts start",
     "serve": "serve -n -s build -l 3000",
     "watch": "cra-build-watch",
