--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^12.20.18",
     "@types/react": "^16.14.11",
     "@types/react-dom": "^16.9.14",
+    "base32-decode": "^1.0.0",
     "comlink": "^4.3.1",
     "idb-keyval": "^5.1.3",
     "otp": "^1.0.1",
